<resources>
    <string name="app_name">Монитор</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="detail_delete_logs">Delete</string>

    <string name="menu_home">Все</string>
    <string name="menu_warning">Warning</string>
    <string name="menu_error">Error</string>
    <string name="menu_not_monitoring">Неотслеживаемые</string>
    <string name="menu_settings">Настройки</string>

    <string name="dialog_title">Удалить логи?</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_ok">Принять</string>
    <string name="new_error">NEW</string>
    <string name="reset_monitor">Обновить</string>
    <string name="delete_all_log">Удалить логи</string>
    <string name="update_monitor">Сбросить монитор</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Фоновая служба</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Отслеживать метрику всегда</string>
    <string name="attachment_title">Протоколирование</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tree_coll">3 колонки</string>
    <string name="for_coll">4 колонки</string>
    <string name="five_coll">5 колонок</string>
    <string name="hidden">Неотслеживаемые</string>
    <string name="dialog_ststistic">Метрика</string>
    <string name="total_stats">Общая статистика</string>
    <string name="reset">Сбросить монитор</string>
    <string name="search">Поиск</string>
</resources>