<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_warning"
            android:icon="@drawable/baseline_warning_24"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_warning" />
        <item
            android:id="@+id/nav_error"
            android:icon="@drawable/baseline_error_24"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_error" />

        <item android:title="Инструменты">
            <menu>
                <item
                    android:id="@+id/nav_hidden"
                    android:icon="@drawable/baseline_not_interested_24"
                    app:actionViewClass="android.widget.TextView"
                    android:checkable="true"
                    android:title="@string/hidden" />
                <item
                    android:id="@+id/nav_total_stats"
                    android:icon="@drawable/baseline_poll_24"
                    android:title="@string/total_stats"
                    android:checkable="false"/>
                <item
                    android:id="@+id/nav_reset_monitor"
                    android:icon="@drawable/baseline_reset_tv_24"
                    android:title="@string/reset"
                    android:checkable="false"/>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings"
                    android:checkable="false"/>
            </menu>
        </item>
    </group>
</menu>